--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3296,6 +3296,9 @@
     <ClCompile Include="UVa\12700\12708.cpp">
       <Filter>UVa\12700</Filter>
     </ClCompile>
+    <ClCompile Include="Archieve\5100\5140.cpp">
+      <Filter>Archieve\5100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
